[Feature, UI] Now the license of OpenMarkov and third party licenses can be seen from the "Help" menu. A link to the original source of the licenses can be opened in the web browser via a button "Open in web browser" when visualizing the license. Tests have been added, so when adding a dependency with a license not yet reviewed and validated by OpenMarkov's staff, the test will fail (Currently, only the CC0 license is accepted). This is issue 652. [Revert] Reverted 7fba539's change where the Loading screen made it so every step of loading the app had to take 0.25seconds to complete, which causes an implicit 1.0seconds delay of opening the app. (4 operations take place when loading the app). [Test] Simplified tests that where doing more than just testing functionality, and were rather stressing the machines that run the tests. This caused developers to wait longer than needed for all tests to end. [Test, Refactor] NetsRepository (an utility to access networks from a bitbucket's repository via URL) has been replaced, and now networks are stored in "0_miscellaneous/networks". This is issue 651. [UI] Increased size of icons. This is issue 643. [UI] Increased size of PotentialEditDialog to allow showing the uncertainty of the "Exponential" potential. This is issue 644. [UX] The default decision criteria for new networks is "Cost (€)" and "Effectiveness (QALY)". This change won't apply to already existing networks, as their decision criteria is already saved in their PGMX file. This also made test data of "EditUndoTest" to use a different criteria to add when testing "DecisionCriteriaEdit", now it creates a new decision criteria named "new decision criteria" instead of "cost", as "Cost" is already an existing criteria in new networks. This is issue 645. [UX] Created functionality to assign key pressed to buttons automatically. This has affected most of the Options dialogs, and BottomButtonPanelDialog (which by extensions affects every OkCancelDialog). This is issue 634. [